--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "emoji-picker-react": "^4.4.9",
+    "firebase": "^9.22.0",
     "json-server": "^0.17.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
