--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
+    "swr": "^2.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
